--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   },
   "homepage": "https://github.com/tvuotila/pitsa",
   "dependencies": {
-    "archiver": "0.14.3",
-    "async": "^0.9.0",
+    "archiver": "^0.14.4",
+    "async": "^1.0.0",
     "aws-sdk": "^2.1.26",
     "debug": "^2.2.0",
     "github": "^0.2.4",
